tests/snapshots/tui/pipeline_auto_stopped_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
"  Pipeline · run                                    in flight  retries  failed  "
"  ✓ subtopics   █████████████████████████       3/3         0        0       0  "
"  ✓ questions   █████████████████████████     36/36         0        0       0  "
"  ✗ answers     ███████▌ stopped            120/400         0        0       1  "
"    split                                                                       "
"  auto  subtopics ✓ → questions ✓ → answers ✗ → split → train                   "
"  tokens  in 162210  out 39620        cost $0.0135+                             "
"                                                                                "
"  Last errors                                                                   "
"    answers 3f1c…000a  429 Too Many Requests; retrying in 4.0s                  "
"    answers 3f1c…000b  429 Too Many Requests; retrying in 4.0s                  "
"    answers 3f1c…000c  429 Too Many Requests; retrying in 4.0s                  "
"    answers 3f1c…000d  429 Too Many Requests; retrying in 4.0s                  "
"    answers 77aa…10bc  gave up: the answer is not a JSON array of strings       "
"                                                                                "
"  Results                                                                       "
"    subtopics: 3 done, 0 skipped, 0 failed, 0 excluded; tokens 3000 in, 750     "
"      out; cost $0.0012                                                         "
"    questions: 36 done, 0 skipped, 0 failed, 0 excluded; tokens 40210 in, 9120  "
"      out; cost $0.0123                                                         "
"    ✗ 1 item failed                                                             "
"                                                                                "
" ✗ auto stopped at answers: 1 item failed; A resumes … loading · v#.#.#  ? help "
