tests/snapshots/tui/pipeline_finished_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs                                                  rust_expert "
"  Pipeline · answers                                                                        in flight  retries  failed  "
"    subtopics                                                                                                           "
"    questions                                                                                                           "
"  ✓ answers     █████████████████████████████████████████████████████████████████       4/4         0        1       0  "
"    split                                                                                                               "
"                                                                                                                        "
"  tokens  in 4000  out 7360        cost $0.0431                                                                         "
"                                                                                                                        "
"  Last errors                                                                                                           "
"    answers item0  429 Too Many Requests; retrying in 4.0s                                                              "
"                                                                                                                        "
"  Results                                                                                                               "
"    answers: 4 done, 0 skipped, 0 failed, 0 excluded; tokens 4000 in, 7360 out; cost $0.0431                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" r run a stage · 1-4 views · q quit                                                                      v#.#.#  ? help "
