tests/snapshots/tui/pipeline_finished_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
"  Pipeline · answers                                in flight  retries  failed  "
"    subtopics                                                                   "
"    questions                                                                   "
"  ✓ answers     █████████████████████████       4/4         0        0       0  "
"    split                                                                       "
"                                                                                "
"  tokens  in 4000  out 7360        cost $0.0431                                 "
"                                                                                "
"  Last errors                                                                   "
"    answers item0  429 Too Many Requests; retrying in 4.0s                      "
"                                                                                "
"  Results                                                                       "
"    answers: 4 done, 0 skipped, 0 failed, 0 excluded; tokens 4000 in, 7360      "
"      out; cost $0.0431                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" r run a stage · A auto · q quit · 1-6 views                     v#.#.#  ? help "
