tests/snapshots/tui/pipeline_idle_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs          rust_expert "
"  Pipeline                                          in flight  retries  failed  "
"    subtopics                                                                   "
"    questions                                                                   "
"    answers                                                                     "
"    split                                                                       "
"                                                                                "
"  Nothing ran yet in this TUI: press r to run a stage.                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" r run a stage · 1-4 views · q quit                              v#.#.#  ? help "
