tests/snapshots/tui/pipeline_running_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  rust_ex… "
"  Pipeline · run                                    in flight  retries  failed  "
"  ✓ subtopics   █████████████████████████       3/3         0        0       0  "
"  ✓ questions   █████████████████████████     36/36         0        0       0  "
"  … answers     ███████▌                    120/400         8       14       1  "
"  · split       pending                                                         "
"                                                                                "
"  tokens  in 162210  out 39620        cost $0.0135+                             "
"                                                                                "
"  Last errors                                                                   "
"    answers 3f1c…000a  429 Too Many Requests; retrying in 4.0s                  "
"    answers 3f1c…000b  429 Too Many Requests; retrying in 4.0s                  "
"    answers 3f1c…000c  429 Too Many Requests; retrying in 4.0s                  "
"    answers 3f1c…000d  429 Too Many Requests; retrying in 4.0s                  "
"    answers 77aa…10bc  gave up: the answer is not a JSON array of strings       "
"                                                                                "
"  Results                                                                       "
"    subtopics: 3 done, 0 skipped, 0 failed, 0 excluded; tokens 3000 in, 750     "
"      out; cost $0.0012                                                         "
"    questions: 36 done, 0 skipped, 0 failed, 0 excluded; tokens 40210 in, 9120  "
"      out; cost $0.0123                                                         "
"                                                                                "
"                                                                                "
" r run a stage · A auto · q quit    … answers 120/400 · locked · v#.#.#  ? help "
