tests/snapshots/tui/pipeline_stopped_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs                                                  rust_expert "
"  Pipeline · run                                                                            in flight  retries  failed  "
"  ✓ subtopics   █████████████████████████████████████████████████████████████████       3/3         0        0       0  "
"  ✓ questions   █████████████████████████████████████████████████████████████████     36/36         0        0       0  "
"  ✗ answers     ███████████████████▌ stopped                                        120/400         0        0       1  "
"    split                                                                                                               "
"                                                                                                                        "
"  tokens  in 162210  out 39620        cost $0.0135+                                                                     "
"                                                                                                                        "
"  Last errors                                                                                                           "
"    answers 3f1c…000a  429 Too Many Requests; retrying in 4.0s                                                          "
"    answers 3f1c…000b  429 Too Many Requests; retrying in 4.0s                                                          "
"    answers 3f1c…000c  429 Too Many Requests; retrying in 4.0s                                                          "
"    answers 3f1c…000d  429 Too Many Requests; retrying in 4.0s                                                          "
"    answers 77aa…10bc  gave up: the answer is not a JSON array of strings                                               "
"                                                                                                                        "
"  Results                                                                                                               "
"    subtopics: 3 done, 0 skipped, 0 failed, 0 excluded; tokens 3000 in, 750 out; cost $0.0012                           "
"    questions: 36 done, 0 skipped, 0 failed, 0 excluded; tokens 40210 in, 9120 out; cost $0.0123                        "
"    ✗ interrupted: the stage resumes on its next run                                                                    "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" r run a stage · 1-4 views · q quit                                                          … loading · v#.#.#  ? help "
